--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,6 @@ jobs:
       
     - name: Run Jupyter Notebook
     # Runs a single command using the runners shell
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: python -m pip install --upgrade pip && pip install -r requirements.txt
 
    
