--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
       
     - name: Run Jupyter Notebook
     # Runs a single command using the runners shell
-      run: pip install fbprophet
+      run: python -V && pip install fbprophet
    
