--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,12 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    # Sets the python version to use in this runner.
+    # Requires any version of python 3.
     - uses: actions/setup-python@v2
       with:
           python-version: '3.x'
     - name: Run Jupyter Notebook
     # Runs a single command using the runners shell
-      run: python -V && pip install fbprophet
+      run: pip install -r requirements.txt
    
