updated requirements...testing out actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,5 @@ jobs:
     - name: Run Jupyter Notebook
     # Runs a single command using the runners shell
       run: pip install -r requirements.txt
+      run: ls && python src/covid_forecaster.py && jupyter notebook
    
