updated requirements...testing out actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,5 @@ jobs:
           python-version: '3.x'
     - name: Run Jupyter Notebook
     # Runs a single command using the runners shell
-      run: pip install -r requirements.txt
-      run: ls && python src/covid_forecaster.py && jupyter notebook
+      run: pip install -r requirements.txt && ls && python src/covid_forecaster.py && jupyter notebook
    
